Optimized route can now be seen on Map View with Markers

--- a/vue/index.html
+++ b/vue/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="images\travel.png" alt="Browser Tab Image">
     <title>City Tours</title>
     <script type="module" src="/src/main.js"></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArFQYadwXP1Bwc1UAlOWchy34thjJBQ0w"
+    async
+    defer
+  ></script>
   </head>
   <body>
     <noscript>
