--- a/vue/index.html
+++ b/vue/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="images\travel.png" alt="Browser Tab Image">
-    <title>City Tours</title>
+    <title>VeloCity: Where Speed Meets Discovery.</title>
     <script type="module" src="/src/main.js"></script>
     <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArFQYadwXP1Bwc1UAlOWchy34thjJBQ0w"
