--- a/vue/index.html
+++ b/vue/index.html
@@ -8,7 +8,7 @@
     <title>VeloCity: Where Speed Meets Discovery.</title>
     <script type="module" src="/src/main.js"></script>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArFQYadwXP1Bwc1UAlOWchy34thjJBQ0w"
+    src="https://maps.googleapis.com/maps/api/js?key=xxxx"
     async
     defer
   ></script>
